# rotation-angle-signatures

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
configs/: paper.yaml  smoke.yaml
docs/: DATASETS.md  METHODS_AND_ASSUMPTIONS.md  PAPER_GAPS.md  REPRODUCIBILITY.md
scripts/: run_all_local.sh  slurm_array.sh
src/rotation_patterns/: __init__.py  cli.py  compute.py  config.py  data.py  figures.py  manifest.py  models.py  prediction.py  reference.py  reproducibility.py  results.py  smoke.py  training.py
src/rotation_patterns/experiments/: __init__.py  classification.py  hog.py  segmentation.py
src/rotation_patterns/reference_data/: __init__.py  metadata.json
tests/: test_config_manifest.py  test_data.py  test_figures.py  test_models.py  test_reference_prediction.py  test_results.py  test_training.py
