[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rotation-patterns"
version = "0.3.0"
description = "Research code for rotation-angle signatures in self-supervised learning"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Paul Yan"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "Pillow>=10,<13",
  "PyYAML>=6,<7",
  "matplotlib>=3.8,<4",
  "scikit-image>=0.22,<1",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "timm>=1.0,<2",
  "tqdm>=4.66,<5",
]

[project.urls]
Paper = "https://openreview.net/forum?id=85rdlgTS50"
Repository = "https://github.com/paulyan678/rotation-angle-signatures"
Issues = "https://github.com/paulyan678/rotation-angle-signatures/issues"

[project.optional-dependencies]
medical = ["nibabel>=5.2,<6"]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.6,<1"]

[project.scripts]
rotation-patterns = "rotation_patterns.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rotation_patterns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
